add init loading time and framerate

--- a/tf.js_projects/PT_trainer/style.css
+++ b/tf.js_projects/PT_trainer/style.css
@@ -28,6 +28,11 @@ button {
   display: none;
 }
 
-#status {
+#init_time, #framerate {
   font-size:150%;
+}
+
+#data_status {
+  font-size: 150%;
+  margin-top: -10px;
 }
